--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -408,4 +408,8 @@
     <string name="navbar_menu_big_button">Menu button</string>
 
     <string name="powerwidget_screen_timeout_toast">Screen timeout set to: %1$d %2$s</string>
+    <!-- Label in drop down to identify brightness slider -->
+    <string name="brightness_label">Brightness</string>
+    <string name="status_bar_settings_gps_button">GPS</string>
+    <string name="toggle_data">Data</string>
 </resources>
